--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,10 +31,20 @@
   <div class='nav_item'>
     <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
   </div>
-  <div class='nav_item'>
-    <%= link_to 'Log Out', logout_path, class: 'btn btn-small' %>
+  <div class='btn-group nav_item'>
+    <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+      Sexy <span class='caret'></span>
+    <% end %>
+    <ul class='dropdown-menu'>
+      <li><%= link_to 'Edit Profile', edit_user_path(@user)%></li>
+      <li><%= link_to 'View Profile', user_path(@user) %></li>
+      <li><%= link_to 'Logout', logout_path %></li>
+    </ul>
   </div>
 <% else %>
+  <div class='nav_item'>
+    <%= link_to 'Register', register_path, class: 'btn btn-success btn-small' %>
+  </div>
   <div class='nav_item'>
     <%= link_to 'Log In', login_path, class: 'btn btn-small' %>
   </div>
