established edit and show user pages, some partials, etc

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,5 @@
 <h5>Comments: </h5>
 
 <% @post.comments.each do |comment| %>
-  <div class='well span8'>
-    <em>"<%= comment.body %>" by <%= comment.user.username %> </em>
-  </div>
+  <%= render 'comments/comment', comment: comment%>
 <% end %>
