--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,13 +32,29 @@
     <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
   </div>
   <div class='btn-group nav_item'>
-    <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
-      Sexy <span class='caret'></span>
+    <%= link_to('', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown')  do %>
+      <%= current_user.username %>
+      <span class='caret'></span>
     <% end %>
     <ul class='dropdown-menu'>
-      <li><%= link_to 'Edit Profile', edit_user_path(@user)%></li>
-      <li><%= link_to 'View Profile', user_path(@user) %></li>
-      <li><%= link_to 'Logout', logout_path %></li>
+      <li>
+        <%= link_to edit_user_path(current_user) do %>
+          <i class='icon-pencil'></i>
+          edit profile
+        <% end %>
+      </li>
+      <li>
+        <%= link_to user_path(current_user) do %>
+          <i class='icon-user'></i>
+          view profile
+        <% end %>
+      </li>
+      <li>
+        <%= link_to logout_path do %>
+          <i class='icon-circle-arrow-left'></i>
+          logout
+        <% end %>
+      </li>
     </ul>
   </div>
 <% else %>
