--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,6 +29,6 @@
 
 <h5>Comments: </h5>
 
-<% @post.comments.each do |comment| %>
+<% @post.comments.reload.each do |comment| %>
   <%= render 'comments/comment', comment: comment%>
 <% end %>
