--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,7 +13,7 @@
   <ul class='dropdown-menu'>
     <% Category.all.each do |category| %>
       <li>
-        <%= link_to category.name, category_path(category)%>
+        <%= link_to category.name, category_path(category.slug)%>
       </li>
     <% end %>
     <% if logged_in? %>
